--- a/index.html
+++ b/index.html
@@ -4,34 +4,35 @@ html
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منتجع الغولف الفاخر</title>
+    <title>منتجع الجولف</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>مرحبا بكم في منتجع الغولف</h1>
+        <h1>مرحبا بكم في منتجع الجولف</h1>
         <nav>
             <a href="index.html">الرئيسية</a>
             <a href="offers.html">العروض</a>
             <a href="facilities.html">المرافق</a>
             <a href="contact.html">الاتصال</a>
-            <a href="about.html">عنّا</a>
+            <a href="about.html">عن المنتجع</a>
         </nav>
     </header>
 
     <main class="main-content">
-        <section class="welcome-section">
-            <h2>تجربة لا تُنسى</h2>
-            <!-- أضف صورة هنا لاحقًا -->
-            <div class="image-placeholder" style="width:100%; height:400px; background:#eee;"></div>
-            <p>استمتع بأفضل مرافق الجولف في المنطقة</p>
-        </section>
+        <div class="card">
+            <h2>تجربة فريدة في أحضان الطبيعة</h2>
+            <p>استمتع بأجمل أوقاتك في منتجعنا الفاخر</p>
+            <div style="background:#eee; height:200px; display:flex; align-items:center; justify-content:center;">
+                [مكان الصورة الرئيسية]
+            </div>
+        </div>
     </main>
 
     <div class="accessibility-toolbar">
-        <button onclick="adjustFontSize(1)">تكبير الخط</button>
-        <button onclick="adjustFontSize(-1)">تصغير الخط</button>
-        <button onclick="toggleHighContrast()">تباين</button>
+        <button data-font="1">+A</button>
+        <button data-font="-1">-A</button>
+        <button id="contrast-btn">تباين</button>
     </div>
 
     <script src="js/scripts.js"></script>
