--- a/offers.html
+++ b/offers.html
@@ -4,14 +4,23 @@ html
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عروضنا المميزة</title>
+    <title>عروضنا</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- نفس الهيدر -->
-    
+    <header>
+        <h1>عروضنا المميزة</h1>
+        <nav>
+            <a href="index.html">الرئيسية</a>
+            <a href="offers.html">العروض</a>
+            <a href="facilities.html">المرافق</a>
+            <a href="contact.html">الاتصال</a>
+            <a href="about.html">عن المنتجع</a>
+        </nav>
+    </header>
+
     <main class="main-content">
-        <div class="offer-card">
+        <div class="card">
             <h3>عرض الموسم</h3>
             <ul>
                 <li>إقامة 5 ليالي</li>
@@ -21,7 +30,8 @@ html
         </div>
     </main>
 
-    <!-- نفس الفوتر والأدوات -->
+    <!-- نفس شريط الأدوات -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
 
